# GeometricNeuralNetwork

./: .clang-format  .gitignore  CMakeLists.txt  Config.h.in  DataTypes.hpp  Doxyfile  README.md
docs/: Doxyfile  README.md  mainpage.dox
include/: LAObject.hpp  Matrix.hpp  Matrix.i.hpp  NN.hpp  NN.i.hpp  Parser.hpp  Vector.hpp  Vector.i.hpp
include/impl/: Matrix.i.hpp  NN.i.hpp  Vector.i.hpp
src/: MainActivity.cpp  NN.cpp
test/: CMakeLists.txt  test_matrix.cc  test_matrix.cpp  test_nn.cc  test_nn.cpp  test_parser.cc  test_parser.cpp  test_random.cc  test_train_nn.cc  test_train_nn.cpp  test_vector.cc  test_vector.cpp
